# serializer version: 1
# name: TestEventPoolAsInterval.test_columns_snapshot[datetime]
  list([
    'duration',
    'end',
    'flag_valid',
    'id',
    'observed_at',
    'response_time',
    'start',
    'status',
    'token_emb',
    'value',
  ])
# ---
# name: TestEventPoolAsInterval.test_columns_snapshot[timestep]
  list([
    'duration',
    'end',
    'flag_valid',
    'id',
    'response_time',
    'start',
    'status',
    'token_emb',
    'value',
  ])
# ---
# name: TestEventPoolAsInterval.test_feature_col_duration[datetime]
  shape: (267, 10)
  ┌─────────────┬─────────────┬────────────┬─────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ duration    ┆ end         ┆ flag_valid ┆ id  ┆ … ┆ start      ┆ status  ┆ token_emb  ┆ value     │
  │ ---         ┆ ---         ┆ ---        ┆ --- ┆   ┆ ---        ┆ ---     ┆ ---        ┆ ---       │
  │ duration[ms ┆ datetime[ms ┆ bool       ┆ i64 ┆   ┆ datetime[μ ┆ str     ┆ array[f32, ┆ f64       │
  │ ]           ┆ ]           ┆            ┆     ┆   ┆ s]         ┆         ┆ 32]        ┆           │
  ╞═════════════╪═════════════╪════════════╪═════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 17999d 23h  ┆ 2050-01-15  ┆ false      ┆ 1   ┆ … ┆ 2000-10-05 ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.725006,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 25999d 23h  ┆ 2071-12-19  ┆ true       ┆ 1   ┆ … ┆ 2000-10-13 ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.594354,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 23999d 23h  ┆ 2066-07-10  ┆ true       ┆ 1   ┆ … ┆ 2000-10-25 ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.678199,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 27999d 23h  ┆ 2077-06-28  ┆ true       ┆ 1   ┆ … ┆ 2000-10-31 ┆ ok      ┆ [0.193563, ┆ 0.169945  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.382689,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.78663… ┆           │
  │ 23999d 23h  ┆ 2066-08-14  ┆ true       ┆ 1   ┆ … ┆ 2000-11-29 ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.210704,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ …           ┆ …           ┆ …          ┆ …   ┆ … ┆ …          ┆ …       ┆ …          ┆ …         │
  │ 17999d 23h  ┆ 2050-02-28  ┆ null       ┆ 50  ┆ … ┆ 2000-11-18 ┆ ok      ┆ null       ┆ 0.925687  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆            ┆           │
  │ 18999d 23h  ┆ 2052-11-28  ┆ null       ┆ 50  ┆ … ┆ 2000-11-22 ┆ warn    ┆ null       ┆ -0.942775 │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆            ┆           │
  │ 17999d 23h  ┆ 2050-04-11  ┆ null       ┆ 50  ┆ … ┆ 2000-12-30 ┆ ok      ┆ null       ┆ 0.829838  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆            ┆           │
  │ 22999d 23h  ┆ 2064-01-07  ┆ null       ┆ 50  ┆ … ┆ 2001-01-18 ┆ ok      ┆ null       ┆ 1.595954  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆            ┆           │
  │ 14999d 23h  ┆ 2042-03-07  ┆ null       ┆ 50  ┆ … ┆ 2001-02-11 ┆ ok      ┆ null       ┆ 2.451282  │
  │ 43m 20s     ┆ 23:43:20    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆            ┆           │
  └─────────────┴─────────────┴────────────┴─────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestEventPoolAsInterval.test_feature_col_duration[timestep]
  shape: (267, 9)
  ┌───────────┬────────────┬────────────┬─────┬───┬───────┬─────────┬────────────────┬───────────┐
  │ duration  ┆ end        ┆ flag_valid ┆ id  ┆ … ┆ start ┆ status  ┆ token_emb      ┆ value     │
  │ ---       ┆ ---        ┆ ---        ┆ --- ┆   ┆ ---   ┆ ---     ┆ ---            ┆ ---       │
  │ f64       ┆ f64        ┆ bool       ┆ i64 ┆   ┆ f64   ┆ str     ┆ array[f32, 32] ┆ f64       │
  ╞═══════════╪════════════╪════════════╪═════╪═══╪═══════╪═════════╪════════════════╪═══════════╡
  │ 17.999988 ┆ 295.999988 ┆ false      ┆ 1   ┆ … ┆ 278.0 ┆ pending ┆ [0.764766,     ┆ -1.463386 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.52712, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.126464…      ┆           │
  │ 25.999988 ┆ 311.999988 ┆ true       ┆ 1   ┆ … ┆ 286.0 ┆ pending ┆ [0.356086,     ┆ 1.645544  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.61515, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.074617…      ┆           │
  │ 23.999988 ┆ 321.999988 ┆ true       ┆ 1   ┆ … ┆ 298.0 ┆ warn    ┆ [0.45854,      ┆ -0.569401 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.092267, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.230326…      ┆           │
  │ 27.999988 ┆ 331.999988 ┆ true       ┆ 1   ┆ … ┆ 304.0 ┆ pending ┆ [0.951114,     ┆ 0.199385  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.319548, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.13458…       ┆           │
  │ 23.999988 ┆ 356.999988 ┆ true       ┆ 1   ┆ … ┆ 333.0 ┆ pending ┆ [0.333197,     ┆ 0.248016  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.48291, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.918873…      ┆           │
  │ …         ┆ …          ┆ …          ┆ …   ┆ … ┆ …     ┆ …       ┆ …              ┆ …         │
  │ 17.999988 ┆ 339.999988 ┆ null       ┆ 50  ┆ … ┆ 322.0 ┆ pending ┆ null           ┆ -0.295043 │
  │ 18.999988 ┆ 344.999988 ┆ null       ┆ 50  ┆ … ┆ 326.0 ┆ error   ┆ null           ┆ -1.032358 │
  │ 17.999988 ┆ 381.999988 ┆ null       ┆ 50  ┆ … ┆ 364.0 ┆ error   ┆ null           ┆ -0.474862 │
  │ 22.999988 ┆ 405.999988 ┆ null       ┆ 50  ┆ … ┆ 383.0 ┆ pending ┆ null           ┆ 1.302775  │
  │ 14.999988 ┆ 421.999988 ┆ null       ┆ 50  ┆ … ┆ 407.0 ┆ ok      ┆ null           ┆ -0.490614 │
  └───────────┴────────────┴────────────┴─────┴───┴───────┴─────────┴────────────────┴───────────┘
# ---
